fix: Header navigation bar spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,8 @@
     &__list {
       display: flex;
       column-gap: 24px;
+      margin-bottom: 0;
+      padding-left: 0;
       list-style: none;
 
       &__item {
